src/syntax/snapshots/texlab__syntax__latex__tests__class_include_empty.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\documentclass{}\"#)"

---
ROOT@0..16
  PREAMBLE@0..16
    CLASS_INCLUDE@0..16
      CLASS_INCLUDE_COMMAND@0..14 "\\documentclass"
      BRACE_GROUP_WORD_LIST@14..16
        L_BRACE@14..15 "{"
        R_BRACE@15..16 "}"

