src/syntax/snapshots/texlab__syntax__latex__tests__class_include_simple.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\documentclass{article}\"#)"

---
ROOT@0..23
  PREAMBLE@0..23
    CLASS_INCLUDE@0..23
      CLASS_INCLUDE_COMMAND@0..14 "\\documentclass"
      BRACE_GROUP_WORD_LIST@14..23
        L_BRACE@14..15 "{"
        WORD@15..22 "article"
        R_BRACE@22..23 "}"

