src/syntax/snapshots/texlab__syntax__latex__tests__color_set_definition_error4.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\definecolorset\"#)"

---
ROOT@0..15
  PREAMBLE@0..15
    COLOR_SET_DEFINITION@0..15
      COLOR_SET_DEFINITION_COMMAND@0..15 "\\definecolorset"
      MISSING@15..15 ""
      MISSING@15..15 ""
      MISSING@15..15 ""
      MISSING@15..15 ""

