src/syntax/snapshots/texlab__syntax__latex__tests__command_definition_no_impl_error.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\newcommand{\\foo\"#)"

---
ROOT@0..16
  PREAMBLE@0..16
    COMMAND_DEFINITION@0..16
      COMMAND_DEFINITION_COMMAND@0..11 "\\newcommand"
      BRACE_GROUP_COMMAND@11..16
        L_BRACE@11..12 "{"
        GENERIC_COMMAND_NAME@12..16 "\\foo"
        MISSING@16..16 ""

