src/syntax/snapshots/texlab__syntax__latex__tests__environment_nested.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\begin{foo} \\begin{qux} \\end{baz} \\end{bar}\"#)"

---
ROOT@0..43
  PREAMBLE@0..0
  ENVIRONMENT@0..43
    BEGIN@0..12
      BEGIN_ENV@0..6 "\\begin"
      BRACE_GROUP_WORD@6..12
        L_BRACE@6..7 "{"
        WORD@7..10 "foo"
        R_BRACE@10..11 "}"
        WHITESPACE@11..12 " "
    ENVIRONMENT@12..34
      BEGIN@12..24
        BEGIN_ENV@12..18 "\\begin"
        BRACE_GROUP_WORD@18..24
          L_BRACE@18..19 "{"
          WORD@19..22 "qux"
          R_BRACE@22..23 "}"
          WHITESPACE@23..24 " "
      END@24..34
        END_ENV@24..28 "\\end"
        BRACE_GROUP_WORD@28..34
          L_BRACE@28..29 "{"
          WORD@29..32 "baz"
          R_BRACE@32..33 "}"
          WHITESPACE@33..34 " "
    END@34..43
      END_ENV@34..38 "\\end"
      BRACE_GROUP_WORD@38..43
        L_BRACE@38..39 "{"
        WORD@39..42 "bar"
        R_BRACE@42..43 "}"

