src/syntax/snapshots/texlab__syntax__latex__tests__environment_simple.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\begin{foo} Hello World \\end{bar}\"#)"

---
ROOT@0..33
  PREAMBLE@0..0
  ENVIRONMENT@0..33
    BEGIN@0..12
      BEGIN_ENV@0..6 "\\begin"
      BRACE_GROUP_WORD@6..12
        L_BRACE@6..7 "{"
        WORD@7..10 "foo"
        R_BRACE@10..11 "}"
        WHITESPACE@11..12 " "
    TEXT@12..24
      WORD@12..17 "Hello"
      WHITESPACE@17..18 " "
      WORD@18..23 "World"
      WHITESPACE@23..24 " "
    END@24..33
      END_ENV@24..28 "\\end"
      BRACE_GROUP_WORD@28..33
        L_BRACE@28..29 "{"
        WORD@29..32 "bar"
        R_BRACE@32..33 "}"

